# gepa-legibility

./: .gitignore  alliterate.ipynb  compare_experiments.ipynb  compare_experiments_psychosis_single_user.ipynb  compare_experiments_psychosis_split_user.ipynb  create_paired_test.py  crosswords.ipynb  dspy_migration.md  eval_prompt.ipynb  example.ipynb  gepa_override.py  install_with_local_gepa.sh  instruction_loader.py  lm.py  logging_utils.py  mcq.ipynb  plot_results.ipynb  prompt_example.ipynb  psychosis.ipynb  psychosis_prompt_example.ipynb  pyproject.toml  therapy copy.ipynb  therapy.ipynb  therapy_debug.py  therapy_finetuning.py  therapy_prompt_example.ipynb
custom_full_program_adapter/: dspy_program_proposal_signature.py  full_program_adapter.py
data-generation/: extract_response_utils.py  prepare_alliterate.py  prepare_mcq.py  prepare_psychosis.py  prepare_therapy.py  psychosis_add_expert_responses.py  psychosis_character_prompt.txt  psychosis_final_format.py  psychosis_history_prompt.txt
docs/: early_stopping.md  psychosis_parallel_execution.md  training_progression_plot_requirements.md
finetuning/: README.md  add_expert_responses.py  chat_with_model.py  finetune_qwen3.py  finetune_qwen3.sh  fix_pytorch.sh  paired_response_generation.py  prepare_data.py  requirements.txt  run_finetuning.sh  serve_model.py  serve_requirements.txt  submit_job.sh  test_on_dataset.py  therapy_response_generator.py  train_therapy.py
instruction_proposer/: custom_prompt_instruction_proposer.py
outputs/: crosswords_0916.py  mcq_0916.py
scoring/: alliterate.py  mcq.py  (+3 more)
(+168 files in other folders)
