[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gepa-legibility"
version = "0.1.0"
dependencies = [
	"dspy-ai>=3.0.2",
	"python-dotenv",
	"uvicorn",
	"fastapi",
	"litellm",
	"peft",
	"transformers",
	"trl",
	"datasets",
]
requires-python = ">=3.8"

[tool.setuptools]
py-modules = []
